# projetetudeaccidentfrance

./: .env.example  .gitignore  ANALYSIS_REPORT.md  CHANGELOG_PHASE5.md  COMMENCEZ_ICI.md  CV_GOUESSE_GO.md  DASHBOARD_BEFORE_AFTER.md  DASHBOARD_README.md  DEPLOY_RENDER_QUICK.md  LICENSE  PHASE4_COMPLETE.md  PHASE5B_RESUME_FINAL.md  PHASE5_ANALYSES.md  PHASE5_COMPLETE.md  PHASE5_SUMMARY.txt  PIPELINE_README.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.txt  Procfile  QUICKSTART.sh  README.md  README_PHASE5.md  STREAMLIT_UX_IMPROVEMENTS.md  coverage.xml  pyproject.toml  render.yaml  requirements-streamlit.txt  requirements.txt  run_dashboard.sh  run_pipeline.py  sql_queries.py  start.sh  start_streamlit.sh  streamlit_app.py  temp_head.py
.github/workflows/: tests.yml
.streamlit/: config.toml
archive/: README.md  accidents_pipeline.py  analysis_pipeline.py  analysis_pipeline_dagster.py  maintenance.py  setup_airflow.sh
dags/: README.md
docs/: 01_CAHIER_DE_CHARGES.md  02_SPECIFICATIONS_FONCTIONNELLES.md  03_SPECIFICATIONS_TECHNIQUES.md  04_EPICS_USER_STORIES.md  05_ANOMALIES.md  06_PRODUCT_BACKLOG.md  AIRFLOW_SETUP.md  ANALYSES_ACADEMIQUES.md  ANALYSIS_ENDPOINTS.md  ARCHITECTURE_DIAGRAMS.md  DATABASE_SCHEMA.md  EXECUTIVE_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_RENDER_DEPLOYMENT.md  PIPELINE_GUIDE.md  PROJECT_STATUS.md  QUICKSTART_PHASE3.md  QUICKSTART_PHASE4.md  README_DOCUMENTATION.md  STREAMLIT_DEPLOYMENT.md  VERSIONING.md  VERSIONING_SUMMARY.md
notebooks/: 01_Getting_Started.ipynb  01_data_exploration.ipynb  02_Advanced_ML_Analysis.ipynb  02_statistical_analysis.ipynb  03_API_Data_Access.ipynb  03_ml_modeling.ipynb  04_visualizations.ipynb  05_risk_normalization_analysis.ipynb  README.md
queries/: 01_schema.sql  02_basic_queries.sql  03_temporal_analysis.sql  04_geographical_analysis.sql  05_severity_analysis.sql  06_advanced_analysis.sql  07_data_export.sql  README.md
scripts/: deploy.sh  migrate_to_render.py  test_analyses.sh
scripts/migrations/: README.md  migration_manager.py  migration_state.json  v1_0_0.py
src/: __init__.py  config.py
src/analyses/: __init__.py  comprehensive_analysis.py  data_cleaning.py  dimensionality_reduction.py  example_analyses.py  machine_learning.py  statistical_analysis.py
src/api/: __init__.py  analysis_endpoints.py  main.py  models.py  routes.py  version.py  version_routes.py
src/database/: __init__.py  database_utils.py  load_postgresql.py  schema.sql
src/pipeline/: README.md  __init__.py  data_config.py  download_data.py  explore_and_clean.py  explore_datasources.py  run_pipeline.py
tests/: __init__.py  test_api.py  test_integration.py  test_pipeline.py
