[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accidents-api"
version = "1.0.0"
description = "Plateforme d'analyse des accidents routiers en France - API + Dashboard + Analysis"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Development Team", email = "dev@example.com"}
]
keywords = [
    "accidents",
    "data-analysis",
    "fastapi",
    "streamlit",
    "postgresql",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # API
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    
    # Dashboard
    "streamlit>=1.28.0",
    "streamlit-extras>=0.3.0",
    
    # Data Processing
    "pandas>=1.5.3",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    
    # Database
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    
    # Analysis & ML
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "h2o>=3.40.0",
    "prince>=0.15.0",
    
    # Visualization
    "plotly>=5.17.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    
    # Utilities
    "requests>=2.31.0",
    "aiofiles>=23.2.0",
    "pyarrow>=13.0.0",
    "joblib>=1.3.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "pre-commit>=3.5.0",
    "ipython>=8.18.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
]

airflow = [
    "apache-airflow>=2.7.0",
    "apache-airflow-providers-postgres>=5.10.0",
]

production = [
    "gunicorn>=21.2.0",
    "python-json-logger>=2.0.0",
]

all = [
    "accidents-api[dev,airflow,production]",
]

[project.urls]
Homepage = "https://github.com/Gouesse05/projetetudeaccidentfrance"
Documentation = "https://github.com/Gouesse05/projetetudeaccidentfrance/tree/main/docs"
Repository = "https://github.com/Gouesse05/projetetudeaccidentfrance.git"
Issues = "https://github.com/Gouesse05/projetetudeaccidentfrance/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["**/*.py"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv_clean
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["src"]
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# mypy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow running tests",
    "api: API endpoint tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Pylint configuration
[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_"]
